# acepython

./: .cirrus.yml  .gitignore  README.md  donotrun.cirrus.yml  meson.build  pyproject.toml
.github/workflows/: build_wheels.yml  release.yml  tests.yml
ace_sources/: Md_ACE.f90  Md_Constantes.f90  ace.pyf
acepython/: ace.py  meson.build  taurex3.py
cirrus/: cirrus_wheel.yml
examples/: run_chemistry.py
python-ace/: ace.py  meson.build
src/acepython/: ace.py  meson.build  taurex3.py
tests/: test_ace.py
tools/: test_sdist.sh
tools/wheels/: cibw_before_build_linux.sh  cibw_before_build_macos.sh  cibw_before_build_win.sh  publish_cirrus.sh
