[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.12.1",
    "wheel",
    "oldest-supported-numpy",
    "numpy>=1.20.0",
]

[project]
name = "python-ace"
description = "Powell's Derivative-Free Optimization solvers"
dependencies = [
    "numpy>=1.20.0",
    "astropy",
]
dynamic = ["version"]