[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python>=0.12.1",
    "wheel",
    "oldest-supported-numpy",
    "numpy>=1.20.0",
]

[project]
name = "acepython"
description = "Python wrapper for the FORTRAN ACE code."
dependencies = [
    "numpy>=1.20.0",
    "astropy>=5.0.0",
]
version="1.0.0"

[project.entry-points."taurex.plugins"]
acepython = "acepython.taurex3"